[package]
name = "ptkgenerator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
winapi = { version = "0.3", features = ["winnls", "stringapiset", "handleapi", "winioctl", "ioapiset", "tlhelp32", "impl-default", "psapi"] }
sysinfo = "0.18.0"